Fix layout jumping due to scrollbars

--- a/src/o.scss
+++ b/src/o.scss
@@ -22,6 +22,7 @@ video {
 
 html {
 	-webkit-text-size-adjust: 100%;
+	overflow-y: scroll;
 }
 
 body {
